test/fixtures/astRegression/shouldFail/assignments/MissingSemicolon.sand
pub class MissingSemicolon {
    missingSemi() {
        a = b
    }
}